[package]
name = "blurry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.0.30", features=["derive"] }
opencv = "0.74.2"


[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "2.1"
rand = "0.8.5"

[profile.release]
strip = true  #Automatically strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction optimizations
